// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedMeasurementSwitch should render correctly in the already enabled state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <div
      class="googlesitekit-margin-top-0 googlesitekit-settings-enhanced-measurement-enabled"
    >
      <div
        class="googlesitekit-settings-enhanced-measurement-enabled-icon"
      >
        <svg />
      </div>
      Enhanced measurement is enabled for this web data stream
    </div>
    <p
      class="googlesitekit-settings-module__fields-group-helper-text"
    >
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;

exports[`EnhancedMeasurementSwitch should render correctly in the default state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <div
      aria-checked="false"
      class="mdc-switch"
      role="switch"
      tabindex="0"
    >
      <div
        class="mdc-switch__track"
      >
         
      </div>
      <div
        class="mdc-switch__thumb-underlay"
      >
        <div
          class="mdc-switch__thumb"
        >
          <input
            class="mdc-switch__native-control"
            id="googlesitekit-switch-0"
            readonly=""
            role="switch"
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <label
      class=""
      for="googlesitekit-switch-0"
    >
      Enable enhanced measurement
    </label>
    <p
      class="googlesitekit-settings-module__fields-group-helper-text"
    >
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;

exports[`EnhancedMeasurementSwitch should render correctly in the disabled state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <div
      aria-checked="false"
      class="mdc-switch mdc-switch--disabled"
      role="switch"
      tabindex="0"
    >
      <div
        class="mdc-switch__track"
      >
         
      </div>
      <div
        class="mdc-switch__thumb-underlay"
      >
        <div
          class="mdc-switch__thumb"
        >
          <input
            class="mdc-switch__native-control"
            disabled=""
            id="googlesitekit-switch-1"
            readonly=""
            role="switch"
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <label
      class=""
      for="googlesitekit-switch-1"
    >
      Enable enhanced measurement
    </label>
    <p
      class="googlesitekit-settings-module__fields-group-helper-text"
    >
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;

exports[`EnhancedMeasurementSwitch should render correctly in the loading state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement googlesitekit-analytics-enable-enhanced-measurement--loading"
  >
    <div
      class="mdc-linear-progress googlesitekit-analytics-enable-enhanced-measurement__progress--settings-edit mdc-linear-progress--indeterminate mdc-linear-progress--small"
      role="progressbar"
    >
      <div
        class="mdc-linear-progress__buffering-dots"
      />
      <div
        class="mdc-linear-progress__buffer"
      />
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
    </div>
    <p
      class="googlesitekit-settings-module__fields-group-helper-text"
    >
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;
